2007-04-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/cpu.h:
	  Use Context_Control_fp* instead of void* for fp_contexts.
	  Eliminate evil casts.

2006-11-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Remove unsigned64, signed64.

2006-11-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/bfin/bf533.h, rtems/bfin/bfin.h: Remove stray whitespaces.
	* rtems/score/bfin.h: Use __BFIN__ instead of BFIN.

2006-11-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* cpu_asm.S: Re-add HI, LO.

2006-11-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* irq.c: Add missing newline.
	* rtems/score/cpu.h: Eliminate hidden backspaces.

2006-10-24	Joel Sherrill <joel@OARcorp.com>

	* rtems/bfin/bfin.h: Eliminate hi, lo, HI, LO, and MK_BMSK.

2006-10-24	Alain Schaefer <alani@easc.ch>

	* Makefile.am, cpu.c, cpu_asm.S, preinstall.am, rtems/score/bfin.h:
	Clean up rtems/score/bfin.h removing parts that are not needed by
	RTEMS CPUkit to bfin specific .h files.
	* rtems/bfin/bf533.h, rtems/bfin/bfin.h: New files.

2006-10-23	Joel Sherrill <joel@OARcorp.com>

	* cpu.c, rtems/score/cpu.h: Use the default IDLE thread body.

2006-10-23	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore, ChangeLog, Makefile.am, cpu.c, cpu_asm.S, irq.c,
	preinstall.am, rtems/asm.h, rtems/score/bfin.h, rtems/score/cpu.h,
	rtems/score/cpu_asm.h, rtems/score/types.h: New files.

2006-10-20  Alain Schaefer <alani@easc.ch>

    * all files : Initial version 