@@ -1,3 +1,7 @@
+2007-04-17	Joel Sherrill <joel@OARcorp.com>
+
+	* rtems/bfin/bf533.h: Fix warnings about constants being too large.
+
 2007-04-17	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* rtems/score/cpu.h:
